--- a/about-us.html
+++ b/about-us.html
@@ -768,6 +768,34 @@ p, div, span, a, li, td, th, input, textarea, button {
     font-size: 1.2rem;
     color: #6b7280;
     transition: color 0.3s ease;
+    font-weight: 700 !important;
+    text-transform: uppercase !important;
+    text-decoration: none !important;
+    position: relative;
+}
+
+.marln-cta-text::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: -4px;
+    left: 0;
+    background-color: #6b7280;
+    transition: width 0.6s ease-in-out;
+    animation: underlineAnimation 2s ease-in-out infinite;
+}
+
+@keyframes underlineAnimation {
+    0% {
+        width: 0;
+    }
+    50% {
+        width: 100%;
+    }
+    100% {
+        width: 0;
+    }
 }
 
 /* Small Mobile Phones Responsive Design */
